# LinuxDevelopment2021

./: README.md
02_TerminalProject/: Makefile  Show.c
03_Multifile/: Makefile
04_Text/: randomize.sh
05_Debugging/: Makefile  gdb_script_1  gdb_script_2  pattern_1.txt  pattern_2.txt  range.c
06_TracingFencing/: Makefile  move.c  remove.c
07_Environmental/: Makefile.am  configure.ac  rhasher.c  test0.sh  test_file.sh  test_string.sh
08_Regexps/: Makefile.am  configure.ac  esub.c  test0.sh
09_Testing/: Makefile.am  README.txt  configure.ac
09_Testing/src/: Makefile.am
09_Testing/tests/: tests.ts
10_I18n/: Makefile.am  README.txt  configure.ac
10_I18n/po/: Makefile.am  ru.po
10_I18n/src/: guess_the_number.c
11_Documenting/: Doxyfile.in  Makefile.am  README.txt  configure.ac  helper.py
11_Documenting/po/: guess_the_number.pot  ru.po
11_Documenting/src/: Makefile.am  guess_the_number.c
11_Documenting_continuation/: Doxyfile.in  Makefile.am  README.md  messages.po
11_Documenting_continuation/po/: Makefile.am  ru.po
11_Documenting_continuation/src/: Doc.md  README.md  guess_the_number.c
